reverted refactor of TabularDataExportGenerator